--- a/style.css
+++ b/style.css
@@ -2,15 +2,24 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.modified{
+.modified {
     color: #696969;
 }
 
-.wrapper{
+.wrapper {
     display: flex;
     justify-content: center;
 }
 
-.container{
+.container {
     max-width: 1000px;
+    padding: 2rem;
+}
+
+h1 {
+    margin-top: 0;
+}
+
+body {
+    margin: 0;
 }
