--- a/Home.css
+++ b/Home.css
@@ -11,7 +11,10 @@
   font-size: 6rem;
   margin: 278px auto 0;
 }
-
+body
+{
+background: #1a1a1a;
+}
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
