--- a/nicepage.css
+++ b/nicepage.css
@@ -17121,7 +17121,6 @@ p {
   }
 }
 .u-align-center {
-  background-color: #ffffff;
   text-align: center;
 }
 @media (min-width: 1200px) {
@@ -20041,7 +20040,7 @@ h6 {
 }
 .u-body {
   color: #111111;
-  background-color: #1a1a1a;
+  background-color: #ffffff;
 }
 /*end-variables color*/
 /*begin-variables font*/
@@ -34626,7 +34625,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: 52px 0 0 auto;
+  margin: 52px auto 0 1003px;
 }
 
 .u-header .u-nav-1 {
@@ -34640,9 +34639,23 @@ a.u-link.u-text-hover-grey-90:hover {
   letter-spacing: 0px;
 }
 
+.u-header .u-image-1 {
+  width: 108px;
+  height: 69px;
+  margin: -56px auto 0 0;
+}
+@media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    margin-top: -56px;
+  }
+}
 
 
-
+@media (max-width: 575px) {
+  .u-header .u-menu-1 {
+    margin-left: 632px;
+  }
+}
 .u-footer {
   background-image: none;
 }
@@ -34687,6 +34700,10 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 
+ /*begin-variables custom-site-css*/.u-body {
+  color: #111111;
+  background-color: #1a1a1a;
+}/*end-variables custom-site-css*/
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
  /*end-variables base-font-size*/
