--- a/Privacy.css
+++ b/Privacy.css
@@ -1,10 +1,14 @@
+.u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
   min-height: 160px;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 900;
-  margin: 54px auto 0;
+  margin: 54px auto;
 }.u-section-2 {
   background-image: none;
 }
