--- a/Home.css
+++ b/Home.css
@@ -12,8 +12,37 @@
   margin: 278px auto 0;
 }
 
+@media (max-width: 1199px) {
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 0;
+    margin-right: 670px;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-text-1 {
+    font-size: 3.75rem;
+    margin: 120px 10px 60px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    margin-left: -17px;
+    margin-right: -17px;
+  }
+}
+
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 500px;
+  }
+
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
+    margin-left: 18px;
+    margin-right: 18px;
   }
 }
