--- a/Wipe.css
+++ b/Wipe.css
@@ -9,6 +9,12 @@
 .u-section-1 .u-text-1 {
   font-weight: 900;
   margin: 54px auto 0;
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-text-1 {
+    margin-top: 28px;
+  }
 }.u-section-2 {
   background-image: none;
 }
