--- a/nicepage.css
+++ b/nicepage.css
@@ -34624,8 +34624,14 @@ a.u-link.u-text-hover-grey-90:hover {
   min-height: 146px;
 }
 
+.u-header .u-image-1 {
+  width: 108px;
+  height: 69px;
+  margin: 38px auto 0 0;
+}
+
 .u-header .u-menu-1 {
-  margin: 52px auto 0 1003px;
+  margin: -56px auto 0 1003px;
 }
 
 .u-header .u-nav-1 {
@@ -34638,22 +34644,24 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1rem;
   letter-spacing: 0px;
 }
-
-.u-header .u-image-1 {
-  width: 108px;
-  height: 69px;
-  margin: -56px auto 0 0;
-}
 @media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    margin-top: -56px;
+  .u-header .u-menu-1 {
+    width: auto;
+    margin-right: 0;
+    margin-bottom: 52px;
+    margin-left: auto;
   }
 }
 
 
 @media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 116px;
+  }
+
   .u-header .u-menu-1 {
-    margin-left: 632px;
+    margin-top: -48px;
+    margin-bottom: 45px;
   }
 }
 .u-footer {
@@ -34679,24 +34687,29 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-sheet-1 {
     min-height: 99px;
   }
+
+  .u-footer .u-text-1 {
+    margin-top: 39px;
+  }
 }
 @media (max-width: 991px) {
   .u-footer .u-sheet-1 {
-    min-height: 76px;
+    min-height: 100px;
+  }
+
+  .u-footer .u-text-1 {
+    margin-top: 39px;
   }
 }
-@media (max-width: 767px) {
-  .u-footer .u-sheet-1 {
-    min-height: 57px;
-  }
-}
+
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
-    min-height: 36px;
+    min-height: 92px;
   }
 
   .u-footer .u-text-1 {
     width: 340px;
+    margin-top: 35px;
   }
 }
 
